objects/ccrz__E_Cart__c.object
<CustomObject>
    <description>The shopping cart header</description>
    <fields>
        <fullName>Budget_Approval_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Approval Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Approved_for_Checkout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Approved for Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Override__c</fullName>
        <label>Budget Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Override_Approved_for_Checkout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Override Approved for Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Override_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Override Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Override__c</fullName>
        <label>Credit Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Message_Text__c</fullName>
        <label>Custom Message Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Message_Type__c</fullName>
        <label>Custom Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CC Carts</relationshipLabel>
        <relationshipName>CC_Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>CC Carts</relationshipLabel>
        <relationshipName>CC_Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reward_Points_Applied__c</fullName>
        <label>Reward Points Applied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Quote_Overrides__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Quote Overrides</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Account of the User that this cart was created for.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>E_Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ActiveCart__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When a new Cart is created, the cart is active by default. Whenever, we want to make anyother cart active, the current active cart should be deactivated</description>
        <label>Active Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__AdjustmentAmount__c</fullName>
        <description>Post order placement adjustment amount that can be used by back-end processing to adjust an order total without adjusting other fields. This information is captured here and transferred to order during place-order call.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AdjustmentReason__c</fullName>
        <description>Optional reason text for the Adjustment Amount field. This information is captured here and transferred to order during place-order call.</description>
        <label>Adjustment Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__AnonymousId__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checks if the user is anonymous or not.
If true the user is anonymous or not logged in
if false he is logged in. Will be used in merging of an anonymous cart with a logged in users cart.</description>
        <label>Anonymous Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__BillTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a CC Contact Address object that contains the bill to address data. This will be a unique copy of the address information captured during checkout.</description>
        <label>Bill To</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>Carts (BillToID)</relationshipLabel>
        <relationshipName>E_Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__BuyerCompanyName__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__BuyerEmail__c</fullName>
        <description>Buyer&apos;s email address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ccrz__BuyerFirstName__c</fullName>
        <description>Buyer&apos;s first name</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__BuyerLastName__c</fullName>
        <description>Buyer&apos;s last name</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__BuyerMobilePhone__c</fullName>
        <description>Buyer&apos;s mobile phone number</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ccrz__BuyerPhone__c</fullName>
        <description>Buyer&apos;s phone number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ccrz__CCEmailAddress__c</fullName>
        <label>CCEmailAddress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__CartId__c</fullName>
        <description>This is an external Id for data loading.</description>
        <externalId>true</externalId>
        <label>Cart Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__CartStatus__c</fullName>
        <description>Cart Status: Every cart is created with a &quot;Open&quot; state, and set to &quot;Closed&quot; state after a corresponding order is placed.</description>
        <label>Cart Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__CartType__c</fullName>
        <description>Cart type &quot;WishList&quot; can be used to keep track of items users want.</description>
        <label>Cart Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read-Only WishList</fullName>
                </value>
                <value>
                    <fullName>WishList</fullName>
                </value>
                <value>
                    <fullName>Cart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Contact of the User that this cart was created for.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CC Carts</relationshipLabel>
        <relationshipName>CC_Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ContractId__c</fullName>
        <description>This holds the Contract Id,if payment method is Contract</description>
        <label>Contract ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CurrencyISOCode__c</fullName>
        <description>The currency that this cart was created in.</description>
        <label>Currency ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveAccountID__c</fullName>
        <description>Holds the effective account for this cart.  This field will be utilized in implementations where a user can order for multiple accounts inclusive or exclusive of their own.  The effective account is used to control the entitlements, pricing, integrations etc that drive the site experience.</description>
        <inlineHelpText>This field will be utilized in implementations where a user can order for multiple accounts inclusive or exclusive of their own.  The effective account is used to control the entitlements, pricing, integrations etc that drive the site experience.</inlineHelpText>
        <label>Effective Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__EncryptedId__c</fullName>
        <description>Semi-random UUID used to refer to the order in URLs.</description>
        <label>Encrypted Id</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Name__c</fullName>
        <defaultValue>&quot;Shopping Cart&quot;</defaultValue>
        <description>Cart&apos;s Name</description>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Note__c</fullName>
        <description>Note</description>
        <label>Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__PONumber__c</fullName>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PaymentMethod__c</fullName>
        <description>The payment method defined in E_PaymentDetail__c.Payment_Method__c.</description>
        <label>Payment Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__RepricedDate__c</fullName>
        <description>The date and time that B2B Commerce most recently priced the cart items. By default, this value is the date and time the cart was created. B2B Commerce compares this value against the Valid Prices Date storefront setting to determine whether to reprice items in the cart.</description>
        <inlineHelpText>The date and time that B2B Commerce most recently priced the cart items.</inlineHelpText>
        <label>Repriced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__RequestDate__c</fullName>
        <description>Request date captured during the checkout process.</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__SessionId__c</fullName>
        <description>SFDC current user&apos;s session id.(Deprecated)</description>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipAmount__c</fullName>
        <description>Order shipment charges. This information is captured here and transferred to order during place-order call.</description>
        <label>Ship Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ship complete indicator captured during the checkout process.</description>
        <label>Ship Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipDiscountAmount__c</fullName>
        <description>Post order placement offset that can be used to adjust the shipment amount. This information is captured in cart and transferred to order during place-order call.</description>
        <label>Ship Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipMethod__c</fullName>
        <description>Shipment method captured during the checkout process.This information is captured here and transferred to order during place-order call.</description>
        <label>Ship Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipStructure__c</fullName>
        <description>Designates the shipping data structure used for this cart.  Valid values are empty or lli but will be expanded in the future.</description>
        <label>Ship Structure</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a CC Contact Address object that contains the ship to address data. This will be a unique copy of the address information captured during checkout.</description>
        <label>Ship To</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>Carts (ShipToID)</relationshipLabel>
        <relationshipName>E_Carts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>The storefront under which the order was placed.</description>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SubtotalAmount__c</fullName>
        <description>Sum of CC Cart Item : Item Total</description>
        <label>Subtotal Amount</label>
        <summarizedField>ccrz__E_CartItem__c.ccrz__ItemTotal__c</summarizedField>
        <summaryForeignKey>ccrz__E_CartItem__c.ccrz__Cart__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccrz__TaxAmount__c</fullName>
        <description>Tax amount captured during order placement.</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__TaxExemptFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if the order was tax exempt. This information is captured in cart and transferred to order during place-order call.</description>
        <label>TaxExemptFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__TaxSubTotalAmount__c</fullName>
        <description>Sum of CC Cart Item : Item Total</description>
        <label>Tax SubTotal Amount</label>
        <summarizedField>ccrz__E_CartItem__c.ccrz__ItemTotal__c</summarizedField>
        <summaryForeignKey>ccrz__E_CartItem__c.ccrz__Cart__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccrz__TotalAmount__c</fullName>
        <formula>ccrz__ShipAmount__c + ccrz__SubtotalAmount__c + ccrz__TaxAmount__c +  ccrz__ShipDiscountAmount__c  +  ccrz__AdjustmentAmount__c + ccrz__TotalSurcharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__TotalDiscount__c</fullName>
        <description>Total Discount</description>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__TotalQuantity__c</fullName>
        <label>Total Quantity</label>
        <summarizedField>ccrz__E_CartItem__c.ccrz__Quantity__c</summarizedField>
        <summaryForeignKey>ccrz__E_CartItem__c.ccrz__Cart__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccrz__TotalSurcharge__c</fullName>
        <description>Misc. Charges applied to the cart.  Not taxes and not shipping.</description>
        <label>Total Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the User that this order was placed for.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ValidationStatus__c</fullName>
        <description>Indicates the validation status for the cart.  Keeping as a free text field for flexibility in use with remote actions.</description>
        <label>Validation Status</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>CC Cart</label>
    <listViews>
        <fullName>Abandoned_Carts</fullName>
        <columns>ccrz__TotalAmount__c</columns>
        <columns>ccrz__TotalQuantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__CartStatus__c</field>
            <operation>equals</operation>
            <value>Abandoned</value>
        </filters>
        <label>Abandoned Carts</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ccrz__CartStatus__c</columns>
        <columns>ccrz__ActiveCart__c</columns>
        <columns>ccrz__TotalAmount__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ccrz__CartType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__ActiveCart__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Cart Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Carts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>